Sub0227_build.log
ROS 2 project directory: /home/y/SA_CAO/src
Starting >>> sub0227
--- stderr: sub0227
In file included from /home/y/SA_CAO/src/sub0227/include/sub0227/slros2_initialize.h:7,
                 from /home/y/SA_CAO/src/sub0227/include/sub0227/Sub0227.h:22,
                 from /home/y/SA_CAO/src/sub0227/src/Sub0227_data.cpp:19:
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h: In member function 'void SimulinkSubscriber<MsgType, BusType>::createSubscriber(const string&, const rmw_qos_profile_t&)':
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:107:42: error: 'struct rclcpp::SubscriptionEventCallbacks' has no member named 'message_lost_callback'
  107 |     subscription_options.event_callbacks.message_lost_callback = [this, topic](const rclcpp::QOSMessageLostInfo& event) {
      |                                          ^~~~~~~~~~~~~~~~~~~~~
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:107:94: error: 'QOSMessageLostInfo' in namespace 'rclcpp' does not name a type
  107 |     subscription_options.event_callbacks.message_lost_callback = [this, topic](const rclcpp::QOSMessageLostInfo& event) {
      |                                                                                              ^~~~~~~~~~~~~~~~~~
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:109:6: error: expected ')' before ';' token
  109 |     };
      |      ^
      |      )
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:107:79: note: to match this '('
  107 |     subscription_options.event_callbacks.message_lost_callback = [this, topic](const rclcpp::QOSMessageLostInfo& event) {
      |                                                                               ^
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h: In lambda function:
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:109:6: error: expected '{' before ';' token
  109 |     };
      |      ^
In file included from /home/y/SA_CAO/src/sub0227/include/sub0227/slros2_initialize.h:7,
                 from /home/y/SA_CAO/src/sub0227/include/sub0227/Sub0227.h:22,
                 from /home/y/SA_CAO/src/sub0227/src/Sub0227.cpp:19:
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h: In member function 'void SimulinkSubscriber<MsgType, BusType>::createSubscriber(const string&, const rmw_qos_profile_t&)':
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:107:42: error: 'struct rclcpp::SubscriptionEventCallbacks' has no member named 'message_lost_callback'
  107 |     subscription_options.event_callbacks.message_lost_callback = [this, topic](const rclcpp::QOSMessageLostInfo& event) {
      |                                          ^~~~~~~~~~~~~~~~~~~~~
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:107:94: error: 'QOSMessageLostInfo' in namespace 'rclcpp' does not name a type
  107 |     subscription_options.event_callbacks.message_lost_callback = [this, topic](const rclcpp::QOSMessageLostInfo& event) {
      |                                                                                              ^~~~~~~~~~~~~~~~~~
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:109:6: error: expected ')' before ';' token
  109 |     };
      |      ^
      |      )
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:107:79: note: to match this '('
  107 |     subscription_options.event_callbacks.message_lost_callback = [this, topic](const rclcpp::QOSMessageLostInfo& event) {
      |                                                                               ^
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h: In lambda function:
/home/y/SA_CAO/src/sub0227/include/sub0227/slros2_generic_pubsub.h:109:6: error: expected '{' before ';' token
  109 |     };
      |      ^
make[2]: *** [CMakeFiles/Sub0227.dir/build.make:79: CMakeFiles/Sub0227.dir/src/Sub0227_data.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/Sub0227.dir/build.make:66: CMakeFiles/Sub0227.dir/src/Sub0227.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:81: CMakeFiles/Sub0227.dir/all] Error 2
make: *** [Makefile:144: all] Error 2
---
Failed   <<< sub0227 [5.19s, exited with code 2]

Summary: 0 packages finished [5.50s]
  1 package failed: sub0227
  1 package had stderr output: sub0227
